--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@ionic-native/social-sharing": "^4.20.0",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
-    "@ionic/storage": "2.1.3",
+    "@ionic/storage": "^2.1.3",
     "cordova-android": "7.1.4",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
@@ -34,17 +34,20 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-socialsharing": "5.4.4",
+    "cordova-sqlite-storage": "3.1.0",
     "es6-promise-plugin": "4.2.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "ngx-qrcode2": "0.0.9",
     "phonegap-plugin-barcodescanner": "8.0.1",
+    "qrcode": "^1.3.3",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.0",
+    "@ionic/lab": "1.0.22",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project",
@@ -63,7 +66,8 @@
       },
       "cordova-plugin-x-socialsharing": {
         "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
-      }
+      },
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
